# learn-2-opengl

./: CMakeLists.txt  README.md
include/: renderer.h  resource.h  window.h
include/glad/: glad.h
src/: glad.c  main.cpp  renderer.cpp  resources.rc  window.cpp
